Fixed container heights and menu overlap + adjusted profile picture scaling

--- a/css/home.css
+++ b/css/home.css
@@ -26,7 +26,7 @@ body::-webkit-scrollbar {
     width: 100%;
     background-image: url('/Images/profileBackground.png');
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
 }
 
 .profile-container > .profile-wrapper > .material-icons.md-66 {
@@ -70,6 +70,7 @@ body::-webkit-scrollbar {
     background-color: white;
     z-index: 1;
     border-radius: 5px 5px 0 0;
+    overflow-y: scroll;
 }
 
 .body-wrapper {
@@ -101,7 +102,7 @@ body::-webkit-scrollbar {
     flex-direction: row;
     margin-bottom: 1.75vh;
 
-    height: 18vh;
+    min-height: 18vh;
     width: 100%;
     border-radius: 0.8vh;
     box-shadow: 1px 1px 10px #b3b3b3;
@@ -120,6 +121,7 @@ body::-webkit-scrollbar {
     color: white;
     text-shadow: 1px 1px 5px var(--bluegreen);
     z-index: 2;
+    padding-bottom: 1vh;
 }
 
 .career-content {
@@ -138,7 +140,7 @@ body::-webkit-scrollbar {
 
     display: flex;
     flex-direction: row;
-    height: 13vh;
+    min-height: 13vh;
     width: 100%;
     z-index: 1;
 }
@@ -149,7 +151,7 @@ body::-webkit-scrollbar {
     position: absolute;
     bottom: 0%;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     filter: grayscale(100%);
     background-image: url('/Images/favouritesBackground.png');
     background-repeat: no-repeat;
@@ -161,7 +163,7 @@ body::-webkit-scrollbar {
 .favourites {
     position: relative;
     display: flex;
-    height: 100%;
+    min-height: 100%;
     width: 45%;
     background: linear-gradient(var(--green), #F9FBE3);
     border-radius: 0.8vh;
@@ -178,7 +180,8 @@ body::-webkit-scrollbar {
 .selftest-wrapper {
     display: flex;
     flex-direction: row;
-    height: 13vh;
+    min-height: 13vh;
+    margin-bottom: 5vh;
     width: 100%;
     z-index: 1;
 }
@@ -189,7 +192,7 @@ body::-webkit-scrollbar {
     position: absolute;
     bottom: 0%;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     filter: grayscale(100%);
     background-image: url('/Images/selftestBackground.png');
     background-repeat: no-repeat;
@@ -201,7 +204,7 @@ body::-webkit-scrollbar {
 .selftest {
     position: relative;
     display: flex;
-    height: 100%;
+    min-height: 100%;
     width: 45%;
     background: linear-gradient(var(--orange), #FCF6EA);
     border-radius: 0.8vh;
