--- a/css/menu.css
+++ b/css/menu.css
@@ -4,7 +4,7 @@ nav {
     bottom: 0;
     width: 100%;
     background-color: #5F3869;
-    z-index: 1;
+    z-index: 2;
 }
 ul
 {
